// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FavoritesButton /> should only render when no favorites set 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [MockFunction],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FavoritesButton)
    active={false}
    addFavorites={[Function]}
    removeFavorites={[Function]}
  >
    <FavoritesButton
      active={false}
      addFavorites={[Function]}
      className=""
      isFetching={true}
      onRippleComplete={[Function]}
      productId={null}
      readOnlyOnFetch={false}
      removeFavorites={[Function]}
      removeThrottle={0}
      rippleClassName=""
    >
      <button
        aria-label="favorites.add"
        className="css-1b5v381 "
        onClick={[Function]}
      >
        <Ripple
          className="css-15r2nrm "
          color="#000"
          disabled={false}
          fill={false}
          onComplete={[Function]}
          overflow={false}
          size={null}
        >
          <div
            aria-hidden={true}
            className="css-15r2nrm "
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            <HeartOutline>
              <Icon
                className=""
                color={null}
                content="<path d=\\"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </HeartOutline>
          </div>
        </Ripple>
      </button>
    </FavoritesButton>
  </Connect(FavoritesButton)>
</Provider>
`;

exports[`<FavoritesButton /> should render when favorites set 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [MockFunction],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FavoritesButton)
    active={true}
    addFavorites={[Function]}
    removeFavorites={[Function]}
  >
    <FavoritesButton
      active={true}
      addFavorites={[Function]}
      className=""
      isFetching={true}
      onRippleComplete={[Function]}
      productId={null}
      readOnlyOnFetch={false}
      removeFavorites={[Function]}
      removeThrottle={0}
      rippleClassName=""
    >
      <button
        aria-label="favorites.remove"
        className="css-1b5v381 "
        onClick={[Function]}
      >
        <Ripple
          className="css-15r2nrm "
          color="#000"
          disabled={false}
          fill={false}
          onComplete={[Function]}
          overflow={false}
          size={null}
        >
          <div
            aria-hidden={true}
            className="css-15r2nrm "
            data-test-id="Ripple"
            onClick={[Function]}
            style={null}
          >
            <Heart>
              <Icon
                className=""
                color={null}
                content="<path d=\\"M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </Heart>
          </div>
        </Ripple>
      </button>
    </FavoritesButton>
  </Connect(FavoritesButton)>
</Provider>
`;
